# Distributed_Cache

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: benchmarks.yml
bench/: cache_bench.cpp  render_svg.py
bench/scenarios/: scenario_matrix.json
cmake/: third_party.cmake
dashboard/: components.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/api/benchmark-snapshot/: route.ts
dashboard/src/app/api/mock-events/: route.ts
dashboard/src/app/api/scenarios/: route.ts
dashboard/src/components/health/: connection-health-panel.tsx
dashboard/src/components/metrics/: benchmark-panel.tsx  latency-chart.tsx  metric-cards.tsx
dashboard/src/components/simulations/: simulation-controls.tsx  simulation-timeline.tsx
dashboard/src/components/source/: source-badge.tsx
dashboard/src/components/topology/: topology-map.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  card.tsx
dashboard/src/contracts/: cluster-events.ts
dashboard/src/lib/: utils.ts  ws-client.ts
dashboard/src/lib/simulations/: scenario-registry.ts
dashboard/tests/api/: benchmark-snapshot.test.ts
dashboard/tests/contracts/: cluster-events.test.ts
dashboard/tests/e2e/: live-dashboard.spec.ts
dashboard/tests/fixtures/: benchmark.json
dashboard/tests/lib/: ws-client.test.ts
dashboard/tests/metrics/: benchmark-panel.test.tsx  metric-cards.test.tsx
dashboard/tests/simulations/: simulation-timeline.test.tsx
dashboard/tests/topology/: topology-map.test.tsx
docs/contracts/: dashboard-events.md
docs/superpowers/plans/: 2026-04-17-cache-core-platform.md  2026-04-17-dashboard-visualizer.md  2026-04-18-mega-refresh-implementation.md
docs/superpowers/specs/: 2026-04-17-distributed-cache-design.md  2026-04-18-mega-refresh-design.md
proto/: cache.proto
scripts/: dashboard-capture.sh  dev-down.sh  dev-up.sh
src/cluster/: hash_ring.cpp  hash_ring.hpp  shard_router.cpp
src/control/: heartbeat_manager.cpp  heartbeat_manager.hpp  raft_metadata_adapter.cpp  raft_metadata_adapter.hpp
src/core/: concurrent_store.cpp  concurrent_store.hpp  request_coalescer.cpp  request_coalescer.hpp  value_entry.hpp
src/core/eviction/: eviction_policy.hpp  slru_lfu_policy.cpp
src/metrics/: prometheus_endpoint.cpp  prometheus_endpoint.hpp
src/protocol/grpc/: cache_service.cpp  cache_service.hpp
src/protocol/resp/: resp_parser.cpp  resp_parser.hpp
src/replication/: ack_policy.hpp  replica_stream.cpp  replica_stream.hpp  wal_writer.cpp  wal_writer.hpp
src/server/: command_dispatcher.cpp  command_dispatcher.hpp  main.cpp  node_config.hpp  resp_worker.hpp
tests/bench/: benchmark_output_test.py  herd_ab_test.py
tests/cluster/: hash_ring_test.cpp
tests/control/: failover_metadata_test.cpp  heartbeat_manager_test.cpp
tests/core/: concurrent_store_test.cpp  eviction_policy_test.cpp  request_coalescer_test.cpp
tests/integration/: resp_set_get_test.cpp
tests/metrics/: prometheus_endpoint_test.cpp
tests/protocol/: grpc_cache_service_test.cpp  resp_parser_test.cpp
tests/replication/: ack_mode_test.cpp  wal_replication_test.cpp
tests/server/: resp_worker_test.cpp
tests/smoke/: test_bootstrap.cpp
